// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkboxes nested dependant components passes through fieldset params without breaking 1`] = `

<span class="govuk-c-error-message">
  Please select an option
</span>

`;

exports[`Checkboxes nested dependant components passes through fieldset params without breaking 2`] = `

<fieldset class="govuk-c-fieldset app-c-fieldset--custom-modifier"
          data-attribute="value"
          data-second-attribute="second-value"
>
  <legend class="govuk-c-fieldset__legend">
    What is your nationality?
    <span class="govuk-c-fieldset__hint">
      If you have dual nationality, select all options that are relevant to you.
    </span>
  </legend>
</fieldset>

`;

exports[`Checkboxes nested dependant components passes through html fieldset params without breaking 1`] = `

<fieldset class="govuk-c-fieldset">
  <legend class="govuk-c-fieldset__legend">
    What is your &lt;b&gt;nationality&lt;/b&gt;?
    <span class="govuk-c-fieldset__hint">
      If you have dual nationality,
      <b>
        select all options
      </b>
      that are relevant to you.
    </span>
  </legend>
</fieldset>

`;

exports[`Checkboxes nested dependant components passes through label params without breaking 1`] = `

<label class="govuk-c-label govuk-c-checkboxes__label"
       data-attribute="value"
       data-second-attribute="second-value"
       for="example-name-1"
>
  <b>
    Option 1
  </b>
</label>
<label class="govuk-c-label govuk-c-checkboxes__label"
       for="example-name-2"
>
  &lt;b&gt;Option 2&lt;/b&gt;
</label>

`;
